First pass delete relation arrays with tests